--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <h1>Lista de usuarios </h1>
+        <table class="table" >
+            <thead>
+                <tr>
+                    <th scope="col">Mail </th>
+                    <th scope="col"> Country </th>
+                    <th scope="col">City</th>
+                    <th scope="col">Level reached</th>
+                </tr>
+            </thead>
+            <tbody id="users-table">
+                
+            </tbody>
+        </table>
+    </div>
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
