--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         <table class="table" >
             <thead>
                 <tr>
-                    <th scope="col">Mail </th>
-                    <th scope="col"> Country </th>
-                    <th scope="col">City</th>
-                    <th scope="col">Level reached</th>
+                    <th scope="col"> Player data </th>
+                    <th scope="col"> Level progression </th>
+                    
                 </tr>
             </thead>
             <tbody id="users-table">
